--- a/scss/pages/home.scss
+++ b/scss/pages/home.scss
@@ -64,7 +64,7 @@
             }
         }
     }
-    &__wrapper{
+    &__wrapper {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
     }
@@ -77,7 +77,7 @@
         flex: 1 0 0;
         border-radius: 4px;
         box-shadow: 1px 2px 4px 0px rgba(0, 0, 0, 0.1);
-        p{
+        p {
             color: #414141;
             padding-top: 10px;
             padding-bottom: 10px;
@@ -85,41 +85,40 @@
     }
 }
 
-@media (max-width: 768px){
-    .discount__wrapper{
+@media (max-width: 768px) {
+    .discount__wrapper {
         grid-template-columns: repeat(3, 1fr);
         gap: 10px;
     }
 }
 
-@media (max-width: 568px){
-    .discount__wrapper{
+@media (max-width: 568px) {
+    .discount__wrapper {
         grid-template-columns: repeat(2, 1fr);
         gap: 10px;
     }
 }
 
-
-@media (max-width: 350px){
-    .discount__wrapper{
+@media (max-width: 350px) {
+    .discount__wrapper {
         grid-template-columns: repeat(1, 1fr);
         gap: 10px;
         justify-items: center;
     }
 }
-.card1 button{
+.card1 button {
     margin-top: 15px;
     width: 100%;
-   padding: 8px;
-   border:2px solid #70c05b;
-   background-color: white;
-   color: #70c05b;
-   border-radius: 5px;
-   transition: 0.5s;
+    padding: 8px;
+    border: 2px solid #70c05b;
+    background-color: white;
+    color: #70c05b;
+    border-radius: 5px;
+    transition: 0.5s;
 }
-.card1 button:hover{
-    background-color: #F63;
-    border: 2px solid #F63;
+.card1 button:hover {
+    background-color: #f63;
+    border: 2px solid #f63;
     color: white;
 }
 .app {
@@ -148,26 +147,42 @@
     gap: 40px;
     display: flex;
 
-    .app__card__left {
+    .box {
         gap: 20px;
         display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding-left: 10px;
         width: 50%;
         max-width: 584px !important;
         border-radius: 4px;
         background: #fcd5ba;
         box-shadow: 0px 8px 16px 0px rgba(202, 147, 96, 0.5);
-
-        &__desc {
+        p {
+            max-width: 258px;
+        }
+        .box__info {
             max-width: 258px;
         }
         h3 {
             max-width: 258px;
         }
-        p {
-            max-width: 258px;
-        }
+
     }
 }
+
+        .second_box {
+            background-color: #E5FFDE;
+            gap: 20px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            padding-left: 10px;
+            width: 50%;
+            max-width: 584px !important;
+            border-radius: 4px;
+            box-shadow: 0px 8px 16px 0px rgba(202, 147, 96, 0.5);
+        }
 
 .staty {
     &__card_box {
@@ -230,66 +245,6 @@
                 box-shadow: 0 0 25px #fec1958c;
             }
 
-            button:hover .star-1 {
-                position: absolute;
-                top: -80%;
-                left: -30%;
-                width: 25px;
-                height: auto;
-                filter: drop-shadow(0 0 10px #fffdef);
-                z-index: 2;
-            }
-
-            button:hover .star-2 {
-                position: absolute;
-                top: -25%;
-                left: 10%;
-                width: 15px;
-                height: auto;
-                filter: drop-shadow(0 0 10px #fffdef);
-                z-index: 2;
-            }
-
-            button:hover .star-3 {
-                position: absolute;
-                top: 55%;
-                left: 25%;
-                width: 5px;
-                height: auto;
-                filter: drop-shadow(0 0 10px #fffdef);
-                z-index: 2;
-            }
-
-            button:hover .star-4 {
-                position: absolute;
-                top: 30%;
-                left: 80%;
-                width: 8px;
-                height: auto;
-                filter: drop-shadow(0 0 10px #fffdef);
-                z-index: 2;
-            }
-
-            button:hover .star-5 {
-                position: absolute;
-                top: 25%;
-                left: 115%;
-                width: 15px;
-                height: auto;
-                filter: drop-shadow(0 0 10px #fffdef);
-                z-index: 2;
-            }
-
-            button:hover .star-6 {
-                position: absolute;
-                top: 5%;
-                left: 60%;
-                width: 5px;
-                height: auto;
-                filter: drop-shadow(0 0 10px #fffdef);
-                z-index: 2;
-            }
-
             .fil0 {
                 fill: #fffdef;
             }
@@ -307,6 +262,7 @@
                 justify-content: center;
                 align-items: center;
                 transition: 0.3s ease-in-out;
+                border: none;
                 &:hover {
                     color: #fff;
                     background: #70c05b;
