--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,5 +1,6 @@
 // Footer
 .footer {
+  position: fixed;
     padding: 24px 0;
     margin-top: 140px;
     background: url("../../assets/images/Home/home-card-images/footer-bg.png")
